--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -21,9 +21,9 @@ jobs:
             # - run: npm ci
             - run: npx github-stats-box@1
               env:
-                  GH_TOKEN: ${{ secrets.GH_TOKEN }} # Do not edit, defined in secrets
+                  GH_TOKEN: ${{ secrets.GIST_TOKEN }} # Do not edit, defined in secrets
 
                   # Edit the following environment variables
-                  GIST_ID: SbQ46ro3BPztnf8HafdcbHEEEi39xO1S6UQg
+                  GIST_ID: https://gist.github.com/jaynamm/3df303693b000f194e50dff9b9366404
                   ALL_COMMITS: true # If `true` it will count all commits, if `false` it will count your last year commits
                   K_FORMAT: true # If `true`, large numbers will be formatted with a "k", for example "1.5k"
