--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,7 +2,7 @@ name: Update GitHub Stats Gist
 on:
     workflow_dispatch:
     schedule:
-        - cron: '0 */12 * * *'
+        - cron: '0 * * * *'
     push:
         branches: master
 jobs:
@@ -24,6 +24,6 @@ jobs:
                   GH_TOKEN: ${{ secrets.GH_TOKEN }} # Do not edit, defined in secrets
 
                   # Edit the following environment variables
-                  GIST_ID: 3df303693b000f194e50dff9b9366404
+                  GIST_ID: ${{ secrets.GIST_ID }}
                   ALL_COMMITS: true # If `true` it will count all commits, if `false` it will count your last year commits
                   K_FORMAT: true # If `true`, large numbers will be formatted with a "k", for example "1.5k"
